Working version printing steps and pressure. Going to append timeSinceStep to message for syncing data later.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 arduino.json
-.\.vscode\
-.\.vscode\arduino.json
-.\.vscode\c_cpp_properties.json
+.vscode/
+.vscode/arduino.json
+.vscode/c_cpp_properties.json
